...
    app:layout_constraintCircle="@+id/circle"
    app:layout_constraintCircleAngle="0"
    app:layout_constraintCircleRadius="0dp"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/ChangeLabelsButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:onClick="onLaunchChangeLabels"
        android:text="Change Labels"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/LocationButton"
        android:layout_width="wrap_content"
...
